tests/machine/x/c/group_by_conditional_sum.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_conditional_sum.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_conditional_sum.c:41:28: error: invalid initializer
   41 |   list_resultItem result = 0;
      |                            ^
/workspace/mochi/tests/machine/x/c/group_by_conditional_sum.c:42:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_resultItem’ [-Wformat=]
   42 |   printf("%d\n", result);
      |           ~^     ~~~~~~
      |            |     |
      |            int   list_resultItem

   1: #include <stdio.h>
